Replace `clazz.newInstance()` call with `clazz.getDeclaredConstructor().newInstance()`. Since `clazz.newInstance()` deprecated in Java 9.